@@ -35,18 +35,18 @@ import io.swagger.v3.oas.annotations.media.ArraySchema;
 import io.swagger.v3.oas.annotations.media.Schema;
 import lombok.RequiredArgsConstructor;
 import org.springframework.core.io.ByteArrayResource;
-import org.springframework.core.io.Resource;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
+import org.thingsboard.server.common.data.StringUtils;
 import org.thingsboard.server.common.data.blob.BlobEntity;
 import org.thingsboard.server.common.data.blob.BlobEntityInfo;
 import org.thingsboard.server.common.data.blob.BlobEntityWithCustomerInfo;
@@ -67,7 +67,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 
 import static org.thingsboard.server.controller.ControllerConstants.BLOB_ENTITY_ID_PARAM_DESCRIPTION;
 import static org.thingsboard.server.controller.ControllerConstants.BLOB_ENTITY_TEXT_SEARCH_DESCRIPTION;
@@ -90,12 +89,14 @@ public class BlobEntityController extends BaseController {
     public static final String BLOB_ENTITY_ID = "blobEntityId";
     public static final String INVALID_BLOB_ENTITY_ID = "Referencing non-existing Blob entity Id will cause an error.";
     public static final String BLOB_ENTITY_DESCRIPTION = "The platform uses Blob(binary large object) entities in the reporting feature, in order to store Dashboard states snapshots of different content types in base64 format. ";
-    public static final String BLOB_ENTITY_INFO_DESCRIPTION = BLOB_ENTITY_DESCRIPTION +
-            "BlobEntityInfo represents an object that contains base info about the blob entity(name, type, contentType, etc.). " +
-            "See the 'Model' tab of the Response Class for more details.";
-    public static final String BLOB_ENTITY_INFO_WITH_CUSTOMER_INFO_DESCRIPTION = BLOB_ENTITY_DESCRIPTION +
-            "BlobEntityWithCustomerInfo represents an object that contains base info about the blob entity(name, type, contentType, etc.) " +
-            "and info about the customer(customerTitle, customerIsPublic) of the user that scheduled generation of the dashboard report. ";
+    public static final String BLOB_ENTITY_INFO_DESCRIPTION =
+            BLOB_ENTITY_DESCRIPTION +
+                    "BlobEntityInfo represents an object that contains base info about the blob entity(name, type, contentType, etc.). " +
+                    "See the 'Model' tab of the Response Class for more details.";
+    public static final String BLOB_ENTITY_INFO_WITH_CUSTOMER_INFO_DESCRIPTION =
+            BLOB_ENTITY_DESCRIPTION +
+                    "BlobEntityWithCustomerInfo represents an object that contains base info about the blob entity(name, type, contentType, etc.) " +
+                    "and info about the customer(customerTitle, customerIsPublic) of the user that scheduled generation of the dashboard report. ";
     public static final String BLOB_ENTITY_QUERY_START_TIME_DESCRIPTION = "The start timestamp in milliseconds of the search time range over the BlobEntityWithCustomerInfo class field: 'createdTime'.";
     public static final String BLOB_ENTITY_QUERY_END_TIME_DESCRIPTION = "The end timestamp in milliseconds of the search time range over the BlobEntityWithCustomerInfo class field: 'createdTime'.";
 
@@ -106,8 +107,7 @@ public class BlobEntityController extends BaseController {
                     BLOB_ENTITY_INFO_WITH_CUSTOMER_INFO_DESCRIPTION + INVALID_BLOB_ENTITY_ID +
                     TENANT_OR_CUSTOMER_AUTHORITY_PARAGRAPH + RBAC_READ_CHECK)
     @PreAuthorize("hasAnyAuthority('TENANT_ADMIN', 'CUSTOMER_USER')")
-    @RequestMapping(value = "/blobEntity/info/{blobEntityId}", method = RequestMethod.GET)
-    @ResponseBody
+    @GetMapping(value = "/blobEntity/info/{blobEntityId}")
     public BlobEntityWithCustomerInfo getBlobEntityInfoById(
             @Parameter(description = BLOB_ENTITY_ID_PARAM_DESCRIPTION, required = true)
             @PathVariable(BLOB_ENTITY_ID) String strBlobEntityId) throws ThingsboardException {
@@ -120,9 +120,8 @@ public class BlobEntityController extends BaseController {
             notes = "Download report file based on the provided Blob entity Id. " +
                     INVALID_BLOB_ENTITY_ID + TENANT_OR_CUSTOMER_AUTHORITY_PARAGRAPH + RBAC_READ_CHECK)
     @PreAuthorize("hasAnyAuthority('TENANT_ADMIN', 'CUSTOMER_USER')")
-    @RequestMapping(value = "/blobEntity/{blobEntityId}/download", method = RequestMethod.GET)
-    @ResponseBody
-    public ResponseEntity<Resource> downloadBlobEntity(
+    @GetMapping(value = "/blobEntity/{blobEntityId}/download")
+    public ResponseEntity<ByteArrayResource> downloadBlobEntity(
             @Parameter(description = BLOB_ENTITY_ID_PARAM_DESCRIPTION, required = true)
             @PathVariable(BLOB_ENTITY_ID) String strBlobEntityId) throws ThingsboardException {
         checkParameter(BLOB_ENTITY_ID, strBlobEntityId);
@@ -141,7 +140,7 @@ public class BlobEntityController extends BaseController {
             notes = "Delete Blob entity based on the provided Blob entity Id. " +
                     INVALID_BLOB_ENTITY_ID + TENANT_OR_CUSTOMER_AUTHORITY_PARAGRAPH + "\n\n" + RBAC_DELETE_CHECK)
     @PreAuthorize("hasAnyAuthority('TENANT_ADMIN', 'CUSTOMER_USER')")
-    @RequestMapping(value = "/blobEntity/{blobEntityId}", method = RequestMethod.DELETE)
+    @DeleteMapping(value = "/blobEntity/{blobEntityId}")
     @ResponseStatus(value = HttpStatus.OK)
     public void deleteBlobEntity(
             @Parameter(description = BLOB_ENTITY_ID_PARAM_DESCRIPTION, required = true)
@@ -157,8 +156,7 @@ public class BlobEntityController extends BaseController {
                     + BLOB_ENTITY_INFO_WITH_CUSTOMER_INFO_DESCRIPTION + PAGE_DATA_PARAMETERS
                     + TENANT_OR_CUSTOMER_AUTHORITY_PARAGRAPH + RBAC_READ_CHECK)
     @PreAuthorize("hasAnyAuthority('TENANT_ADMIN', 'CUSTOMER_USER')")
-    @RequestMapping(value = "/blobEntities", method = RequestMethod.GET)
-    @ResponseBody
+    @GetMapping(value = "/blobEntities")
     public PageData<BlobEntityWithCustomerInfo> getBlobEntities(
             @Parameter(description = PAGE_SIZE_DESCRIPTION)
             @RequestParam int pageSize,
@@ -183,14 +181,14 @@ public class BlobEntityController extends BaseController {
             return new PageData<>();
         }
         if (Authority.TENANT_ADMIN.equals(getCurrentUser().getAuthority())) {
-            if (type != null && type.trim().length() > 0) {
+            if (StringUtils.isNotBlank(type)) {
                 return checkNotNull(blobEntityService.findBlobEntitiesByTenantIdAndType(tenantId, type, pageLink));
             } else {
                 return checkNotNull(blobEntityService.findBlobEntitiesByTenantId(tenantId, pageLink));
             }
         } else { //CUSTOMER_USER
             CustomerId customerId = getCurrentUser().getCustomerId();
-            if (type != null && type.trim().length() > 0) {
+            if (StringUtils.isNotBlank(type)) {
                 return checkNotNull(blobEntityService.findBlobEntitiesByTenantIdAndCustomerIdAndType(tenantId, customerId, type, pageLink));
             } else {
                 return checkNotNull(blobEntityService.findBlobEntitiesByTenantIdAndCustomerId(tenantId, customerId, pageLink));
@@ -202,8 +200,7 @@ public class BlobEntityController extends BaseController {
             notes = "Requested blob entities must be owned by tenant or assigned to customer which user is performing the request. "
                     + BLOB_ENTITY_INFO_DESCRIPTION + TENANT_OR_CUSTOMER_AUTHORITY_PARAGRAPH + RBAC_READ_CHECK)
     @PreAuthorize("hasAnyAuthority('TENANT_ADMIN', 'CUSTOMER_USER')")
-    @RequestMapping(value = "/blobEntities", params = {"blobEntityIds"}, method = RequestMethod.GET)
-    @ResponseBody
+    @GetMapping(value = "/blobEntities", params = {"blobEntityIds"})
     public List<BlobEntityInfo> getBlobEntitiesByIds(
             @Parameter(description = "A list of blob entity ids, separated by comma ','", array = @ArraySchema(schema = @Schema(type = "string")), required = true) @RequestParam("blobEntityIds") String[] strBlobEntityIds) throws ThingsboardException, ExecutionException, InterruptedException {
         checkArrayParameter("blobEntityIds", strBlobEntityIds);
@@ -228,7 +225,7 @@ public class BlobEntityController extends BaseController {
             } catch (ThingsboardException e) {
                 return false;
             }
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
 }
